# visit

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/simple/src/: lib.rs
scripts/: pre-commit
tests/enums/: Cargo.toml
tests/enums/src/: lib.rs
tests/generics/: Cargo.toml
tests/generics/src/: lib.rs
tests/iterators/: Cargo.toml
tests/iterators/src/: lib.rs
tests/primitive/: Cargo.toml
tests/primitive/src/: lib.rs
tests/simple/: Cargo.toml
tests/simple/src/: lib.rs
tests/smart_pointers/: Cargo.toml
tests/smart_pointers/src/: lib.rs
tests/structs/: Cargo.toml
tests/structs/src/: lib.rs
visit/: Cargo.toml
visit/src/: codegen.rs  diag.rs  iter_utils.rs  lib.rs  parse.rs
visit/tests/: compile-test.rs  enums.rs  generics.rs  iterators.rs  primitive.rs  references.rs  smart_pointers.rs  structs.rs
visit/tests/compile-fail/: duplicate_prefixes.rs  duplicate_visitors.rs
