[package]
name = "visit"
version = "0.1.0"
authors = ["Tim Süberkrüb <dev@timsueberkrueb.io>"]
edition = "2018"
description = "Automatically generate Rust code for the Visitor pattern"
license = "MIT/Apache-2.0"
repository = "https://github.com/timsueberkrueb/visit.git"

[dev-dependencies]
simple = { path = "../examples/simple", version = "0.1.0" }

[dependencies]
# TODO: Remove extra-traits
syn = { version = "0.15", features = ["full", "extra-traits", "visit", "visit-mut"] }
proc-macro2 = "0.4"
quote = "0.6"
case = "1.0.0"

[lib]
proc-macro = true
